# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.580 2006/01/15 23:01:01 codeman Exp $

*GLI-0.3 (27 Oct 2005)

  15 Jan 2006; Preston Cody <codeman@gentoo.org>
  webgli/configfiles:
  	check for key in etc_files['rc.conf'] to fix key error
  webgli/timezone: small fix.
  webgli/extrapackages: list-type fix
  webgli/services: same
  glimd: add/edit_client updates.
  
  12 Jan 2006; Preston Cody <codeman@gentoo.org>
  added configure.pyhtml to glimd. minor changes
  to top and add_client.  fixed up showargs.
  added execute.pyhtml
  changed register clients line in gliserv for name->hostname.
  updated TODO.

  10 Jan 2006; Preston Cody <codeman@gentoo.org>
  src/net/server/*:
  added add/del/edit client/profile.pythml for glimd.
  updated templates, showclients, and gliserv.
  
  10 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/*:
  stupid threading module...

  8 Jan 2006; Preston Cody <codeman@gentoo.org>
  AT: rc.conf -> conf.d/clock
  
  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  show 'Calculating dependencies for ...' in subprogress bar at beginning of
  emerge()
  src/GLIArchitectureTemplate.py:
  copy /etc/X11/gdm/gdm.conf.old into chroot if /etc/X11/gdm/gdm.conf exists
  in the chroot
  remove _quickpkg_deps() and _portage_best_{visible,version}()
  src/GLIUtility.py:
  fail immediately in validate_uri() if provided URI can't be parsed
  modify fetch_and_unpack_tarball() and get_uri() to allow fetch subprogress
  debug code in spawn()
  use lower-level os.read() instead of file.read() because python sucks
  src/templates/x86ArchitectureTemplate.py:
  basic subprogress reporting for partitioning
  total_steps was 1 too high

  6 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  move parse_vdb_contents() to GLIPortage
  src/GLIPortage.py:
  remove all symlink fixups