@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.580 2006/01/15 23:01:01 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.581 2006/01/22 23:42:29 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  22 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/SimpleXMLParser.py:
+  initial support for 'include' in XML files
 
   15 Jan 2006; Preston Cody <codeman@gentoo.org>
   webgli/configfiles:
